# geograypher

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  create_cylinders.ipynb  detect_trunks.py  ground_filter.py  ground_masks.py  gui.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  triangulate.py
.dvc/: config
.github/workflows/: .publish-image.yml  black.yml  gh-pages.yml  isort.yml  pytest.yaml
.virtual_documents/examples/: render_labels.ipynb
API_reference/cameras/: index.html
API_reference/entrypoints/: index.html
API_reference/meshes/: index.html
API_reference/predictors/: index.html
API_reference/utils/: index.html
cameras/: index.html
cameras/cameras/: index.html
cameras/derived_cameras/: index.html
cameras/segmentor/: index.html
data/: .gitignore  2023-08-23_1027_QR_F1_rgb_100m_25_img.dvc  9-image-emerald-point-reconstruction.dvc  composite_georef.dvc  ept_trees_01_rectified_inclSmall.geojson  predicted_species_per_face.npy.dvc
data/composite_georef/: .gitignore  composite_20230520T0519_crowns.gpkg.dvc  composite_georef.yml  composite_georef_cameras.xml  composite_georef_low_res_20230928T1604_model_georeferenced.ply.dvc  composite_georef_low_res_20230928T1604_model_local.ply.dvc  composite_georef_low_res_20230928T1604_model_local_transform.csv  composite_georef_low_res_20230928T1637_dsm.tif.dvc  composite_georef_low_res_20230928T1637_dtm.tif.dvc  composite_georef_low_res_20230928T1637_log.txt  composite_georef_low_res_20230928T1637_report.pdf.dvc  images.zip.dvc
data/gascola/: .gitignore  gascola.geojson.dvc  images.dvc  left_camera_0.5_brightened_04.0_20231018T2013_report.pdf.dvc  (+3 more)
dev/: basic_examples.py  geodata.py  process_derek_data.ipynb  render_height_data.py  show_pred_df.py  test_colorspill.py  test_segmentation.py  test_species_seg.py  time_rendering.py
docs/: .pages  applications.md  index.md  software_design.md
examples/: COLMAP_detections.ipynb  aggregate_predictions.ipynb  concept_figure.ipynb  multiview_detections.ipynb  project_detections.ipynb  render_labels.ipynb  undercanopy_painting.ipynb
geograypher/: constants.py
meshes/: index.html
multiview_mapping_toolkit/: config.py  constants.py
multiview_prediction_toolkit/: config.py
search/: search_index.json
semantic_mesh_pytorch3d/: cameras.py  config.py  derived_meshes.py  meshes.py  multiview_mesh.py
software_design/: index.html
tests/: subset_ROI_test.py  test_cameras.py  test_concept.py  test_derived_cameras.py  test_derived_meshes.py  test_derived_segmentors.py  test_filler.py  test_geometric.py  test_images.py  test_indexing.py  test_mesh.py  test_meshes.py  test_numeric.py  test_rig_cameras.py
(+165 files in other folders)
