[tool.poetry]
name = "multiview-mapping-toolkit"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]
readme = "README.md"
packages = [{include = "multiview_mapping_toolkit"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyvista = "^0.42.2"
scikit-image = "^0.21.0"
piexif = "^1.1.3"
chardet = "^5.2.0"
ipykernel = "^6.26.0"
trame = "^3.2.8"
rasterstats = "^0.19.0"
geopandas = "^0.14.2"
scikit-learn = "^1.4.0"
trame-vuetify = "^2.4.2"
trame-vtk = "^2.8.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
