[project]
name = "geograypher"
version = "0.4.0"
description = "Enabling Geospatial Predictions from Individual Drone Images"
authors = [
  {name = "David Russell", email = "djrussell@ucdavis.edu"},
  {name = "Avnoor Singh Sidhu"},
  {name = "Derek Young", email = "djyoung@ucdavis.edu"},
  {name = "Rahul Prabhu"}
]
readme = "README.md"
packages = [{include = "geograypher"}]
requires-python = '>=3.9,<3.12'
dependencies = ['pyvista (>=0.42.2,<0.43.0)', 'scikit-image (>=0.21.0,<0.22.0)', 'piexif (>=1.1.3,<2.0.0)', 'chardet (>=5.2.0,<6.0.0)', 'ipykernel (>=6.26.0,<7.0.0)', 'trame (>=3.2.8,<4.0.0)', 'rasterstats (>=0.19.0,<0.20.0)', 'geopandas (>=0.14.2,<0.15.0)', 'scikit-learn (>=1.4.0,<2.0.0)', 'trame-vuetify (>=2.4.2,<3.0.0)', 'trame-vtk (>=2.8.0,<3.0.0)', 'ipywidgets (>=8.1.1,<9.0.0)', 'cchardet (>=2.1.7,<3.0.0)', 'tqdm (>=4.66.2,<5.0.0)', 'ubelt (>=1.3.5,<2.0.0)', 'setcoverpy (>=0.9.1,<0.10.0)', "trimesh (==3.23.5)", "rtree (>=1.4.0,<2.0.0)", "pyembree (==0.1.12)"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
